Сделал табы для Profile dashboard

--- a/src/pug/pages/profile.pug
+++ b/src/pug/pages/profile.pug
@@ -1,4 +1,4 @@
-extends ../layouts/_main.pug
+extends ../layouts/_two-columns.pug
 
 block variables
     - const title = 'Студенческий портал - Мой профиль';
