--- a/src/pug/sections/dashboard/_dashboard-vacancy.pug
+++ b/src/pug/sections/dashboard/_dashboard-vacancy.pug
@@ -52,10 +52,7 @@ section.vacancy.dashboard__vacancy
                 .vacancy__filter-type
                     h4.vacancy__filter-title Область
                     .filter__education-options
-                        span.filter__education-option IT
-                            button.filter__education-option--delete
-                        span.filter__education-option Бухгалтерия
-                            button.filter__education-option--delete
+                        include ./../select/_select
                 .vacancy__filter-type
                     h4.vacancy__filter-title Заработная плата
                     .filter__salary(style="position: relative")
