--- a/src/pug/sections/select/_select.pug
+++ b/src/pug/sections/select/_select.pug
@@ -1,6 +1,6 @@
 select.fancy-select(name='category' required='required' multiple='multiple')
-    option(value='Бухгалтерия') Бухгалтерия
-    option(value='IT') IT
+    option(value='Бухгалтерия' selected) Бухгалтерия
+    option(value='IT' selected) IT
     option(value='PM') Product Management
     option(value='PrM') Project Management
     option(value='Audio') Audio Production
