--- a/src/scss/blocks/_slider.scss
+++ b/src/scss/blocks/_slider.scss
@@ -191,6 +191,7 @@
   &:hover {
     background-color: #fff;
     color: #2955c9;
+    border: 1px solid transparent;
   }
   &--dark {
     color: #c3cad6;
