--- a/src/scss/blocks/_modal.scss
+++ b/src/scss/blocks/_modal.scss
@@ -3,18 +3,21 @@
   z-index: 999;
   position: fixed;
   width: 401px;
-  height: 371px;
-  left: 50%;
+  min-height: 371px;
   top: 25%;
-  transform: translate(-50%);
+  left: 50%;
+  margin: 0 auto;
+  margin-left: -200px;
   display: none;
   @media (max-width: $mobile) {
     max-width: 90%;
+    margin-left: -45%;
   }
 }
 
 .modal--active {
   display: block;
+  animation: fadeIn .8s;
 }
 
 .modal__close {
@@ -74,8 +77,8 @@
 .modal__form {
   display: flex;
   flex-direction: column;
-  margin-left: 41px;
-  margin-right: 27px;
+  margin-left: 30px;
+  margin-right: 30px;
 }
 
 .form__label {
