--- a/src/scss/blocks/_progress-bar.scss
+++ b/src/scss/blocks/_progress-bar.scss
@@ -3,8 +3,10 @@
   border-radius: 20px;
   height: 10px;
   width: 216px;
-  margin-left: 21px;
   display: flex;
+  @media (min-width: $tablet) {
+    margin-left: 21px;
+  }
 }
 
 .progress-bar{
@@ -30,4 +32,5 @@
   &::after {
     content: '%';
   }
+
 }
