Сделал страницу с табами для студента - доверстать табы

--- a/src/pug/sections/_parent-cabinet-container.pug
+++ b/src/pug/sections/_parent-cabinet-container.pug
@@ -1,5 +1,5 @@
 mixin table
-    table.table-scroll.parent-cabinet__table
+    table.table-scroll.parent-cabinet__table.scrollbar-custom
         thead.table-scroll__header
             tr
                 th.table-scroll__title.table-scroll__title--long Наименование учебной дисциплины
@@ -49,7 +49,7 @@ mixin table
 
 mixin finance()
     h3.parent-cabinet__table-title.title График платежей
-    table.table-scroll.table-scroll__finance.parent-cabinet__table
+    table.table-scroll.table-scroll__finance.parent-cabinet__table.scrollbar-custom
         thead.table-scroll__header-clean
             tr
                 th.table-scroll__title Ожидаемая дата по <br> графику платежей(до)
