--- a/src/pug/sections/_parent-cabinet-tabs.pug
+++ b/src/pug/sections/_parent-cabinet-tabs.pug
@@ -15,7 +15,7 @@
         .finance__content-history
             .parent-cabinet__tab-wrapper.parent-cabinet__tab--active
                 h3.parent-cabinet__table-title.title История оплат
-                table.table-scroll.table-scroll--half
+                table.table-scroll.table-scroll--half.scrollbar-custom
                     thead.table-scroll__header-clean
                         tr
                             th.table-scroll__title Дата
