--- a/src/scss/blocks/_select.scss
+++ b/src/scss/blocks/_select.scss
@@ -63,6 +63,7 @@
     display: none;
     max-height: 250px;
     overflow-x: hidden;
+    width: 100% ;
     > div {
       padding: 10px 15px;
       cursor: pointer;
