--- a/src/scss/style.scss
+++ b/src/scss/style.scss
@@ -85,3 +85,5 @@
 @import "blocks/dashboard";
 @import "blocks/stories";
 @import "blocks/settings";
+@import "blocks/parents-list";
+@import "blocks/hotels";
